--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/build.js"></script>
 </body>
 </html>
